--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -27,7 +27,9 @@ html {
 body {
     margin: 0;
     height: 100%;
-    display: flex;
+    /*display: flex;*/
+    background: #E9E9E9;
+    padding: 1em;
 }
 
 a {
